--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <form id="resumeForm">
     <main>
-<!--         
+        
     <lable for="username">RESUME URL:</lable>
-    <input type="text" id="username" name="username" required /><br><br> -->
+    <input type="text" id="username" name="username" required /><br><br>
 
 
         <label for="name">Name:</label>
